--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "nodejs-meme-scraper",
   "version": "1.0.0",
-  "type": "module,
   "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "author": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "eslint-config-upleveled": "^5.0.4",
+    "typescript": "^5.2.2"
+  }
 }
