--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "cheerio": "1.0.0-rc.12"
   }
 }
