--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "cheerio": "1.0.0-rc.12"
+    "cheerio": "1.0.0-rc.12",
+    "puppeteer": "^21.1.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
