--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cheerio": "1.0.0-rc.12",
+    "node-html-parser": "^6.1.6",
     "puppeteer": "^21.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
