--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "eslint-config-upleveled": "^5.0.4",
-    "typescript": "^5.2.2"
-  },
   "dependencies": {
     "axios": "^1.5.0",
     "cheerio": "1.0.0-rc.12",
-    "got": "^13.0.0",
-    "node-html-parser": "^6.1.6",
-    "parse5": "^7.1.2",
-    "puppeteer": "^21.1.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "got": "^13.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-upleveled": "^5.0.4",
+    "typescript": "^5.2.2"
   }
 }
