--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cheerio": "1.0.0-rc.12",
-    "got": "^13.0.0"
+    "got": "^13.0.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "eslint-config-upleveled": "^5.0.4",
