--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
-    "got": "^13.0.0",
-    "node-fetch": "^3.3.2"
+    "got": "^13.0.0"
   },
   "devDependencies": {
     "eslint-config-upleveled": "^5.0.5",
